Updated the css and js

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
     <div id="wrapper">
         <div class="container">
+            <div class="error">
+                No search results
+            </div>
             <div class="main">
                 
                 <!-- Title Container -->
@@ -35,6 +38,7 @@
                     <img src="./images/search-icon.svg" alt="" class="searchIcon">
                     <button type="submit" class="searchBtn">Search</button>
                 </form>
+                
 
 
                 <!-- Display Container -->
